it will fix checkbox values by returning 0 instead of null values that breaks the addition, it will add 3 headings that judge your order based on order value using js branching

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@
 }
 
 .jumbotron.total h3 {
+  display: none;
   padding-left: 20px;
 }
 
@@ -83,6 +84,10 @@ form#contact {
 
 p.thankyou {
   display: none;
+  color: red;
+}
+
+h3#hungrtiger {
   color: red;
 }
 
